prevent overflow text

--- a/client/src/pages/interview/viewInterview/ViewInterview.module.css
+++ b/client/src/pages/interview/viewInterview/ViewInterview.module.css
@@ -36,7 +36,7 @@
 
 .interviewContent {
     color: var(--colorTextSecondary);
-    word-wrap: break-word;
+    overflow-wrap: anywhere;
     gap: 16px;
     width: 500px;
 }
