--- a/client/src/pages/jobApplication/viewApplication/ViewApplication.module.css
+++ b/client/src/pages/jobApplication/viewApplication/ViewApplication.module.css
@@ -67,7 +67,7 @@
 
 .applicationContent {
     color: var(--colorTextSecondary);
-    word-wrap: break-word;
+    overflow-wrap: anywhere;
     width: 500px;
     gap: 16px;
 }
